--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ APP_PORT = 9090
 DB_HOST = localhost
 DB_DRIVER = mongodb
 DB_PORT = 27017
-MONGO_URL = mongodb://127.0.0.1:27017/bayurahmanadinata_dbs
-DB_NAME = bayurahmanadinata_dbs
+MONGO_URI = mongodb://localhost:27017/bayurahmanadinata_dbs
+DB_SYNC = true
+DB_LOGGING = true
