--- a/.env
+++ b/.env
@@ -7,3 +7,13 @@ DB_PORT = 27017
 MONGO_URI = mongodb://localhost:27017/bayurahmanadinata_dbs
 DB_SYNC = true
 DB_LOGGING = true
+
+DB_CACHE_TIME = 180
+REDIS_HOST = localhost
+REDIS_PORT = 6379
+REDIS_DB = 17
+
+JWT_SECRET = kruingboganfdfekdfa$fdjslanf8987hnffkgdsgr3jh893h
+JWT_EXPIRED = 86400
+
+
