--- a/package.json
+++ b/package.json
@@ -20,24 +20,25 @@
     "swagger-node-express": "^2.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/node": "^7.7.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
-    "@babel/plugin-transform-modules-commonjs": "^7.7.4",
-    "@babel/plugin-transform-runtime": "^7.7.4",
-    "@babel/polyfill": "^7.7.0",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/runtime": "^7.7.4",
-    "babel-cli": "^6.26.0",
-    "babel-jest": "^24.9.0",
-    "mongoose": "^5.8.9",
-    "nodemon": "^2.0.2"
+    "@babel/core": "7.7.4",
+    "@babel/node": "7.7.4",
+    "@babel/plugin-syntax-dynamic-import": "7.7.4",
+    "@babel/plugin-transform-modules-commonjs": "7.7.4",
+    "@babel/plugin-transform-runtime": "7.7.4",
+    "@babel/polyfill": "7.7.0",
+    "@babel/preset-env": "7.7.4",
+    "@babel/runtime": "7.7.4",
+    "cross-env": "6.0.3",
+    "dotenv": "8.2.0",
+    "jest": "^24.9.0",
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2",
+    "babel-jest": "^25.1.0",
+    "mongoose": "^5.8.9"
   },
   "scripts": {
     "start": "node index",
     "start:dev": "nodemon --exec babel-node index.js",
-    "precompile": "rm -rf dist",
-    "compile": "npx babel src --out-dir dist",
     "pretest": "cross-env NODE_ENV=test",
     "test": "jest --testTimeout=10000",
     "test:coverage": "jest --testTimeout --coverage",
