[FEATURE] Able to redis

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_PORT = 9090
 DB_HOST = localhost
 DB_DRIVER = mongodb
 DB_PORT = 27017
-MONGO_URI = mongodb://localhost:27017/bayurahmanadinata_dbs
+MONGO_URI = mongodb://127.0.0.1:27017/bayurahmanadinata_dbs
 DB_SYNC = true
 DB_LOGGING = true
 
