--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "md5": "^2.2.1",
     "moment": "^2.24.0",
     "mongodb": "^3.5.2",
+    "morgan": "^1.9.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "redis": "^2.8.0",
